k8s/05-service.yaml
# k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-api-service
  namespace: java-api
  labels:
    app: java-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: java-api
